Change OxaPay image format to PNG
Updated OxaPay image source from SVG to PNG format.

--- a/_includes/services/services.html
+++ b/_includes/services/services.html
@@ -20,7 +20,7 @@
         <a href="https://coingate.com/" target="_blank"><img alt="CoinGate" src="/img/services/coingate.png"></a>
       </div>
       <div class="col-sm-4 col-md-3 vertical-align to-animate">
-        <a href="https://oxapay.com/" target="_blank"><img alt="OxaPay" src="/img/services/oxapay.svg"></a>
+        <a href="https://oxapay.com/" target="_blank"><img alt="OxaPay" src="/img/services/oxapay.png"></a>
       </div>
       <div class="col-sm-4 col-md-3 vertical-align to-animate">
         <a href="https://gourl.io/" target="_blank"><img alt="GoUrl" src="/img/services/gourl.png"></a>
